--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -79,17 +79,17 @@
                 android:orientation="vertical"
                 android:weightSum="1">
 
-                <TextView
-                    android:id="@+id/cart_footer_action"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:background="?attr/selectableItemBackground"
-                    android:paddingBottom="5dp"
-                    android:paddingTop="8dp"
-                    android:text="@string/Do_you_have_a_discount_code"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="16sp"/>
+                <!--<TextView-->
+                    <!--android:id="@+id/cart_footer_action"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_gravity="end"-->
+                    <!--android:background="?attr/selectableItemBackground"-->
+                    <!--android:paddingBottom="5dp"-->
+                    <!--android:paddingTop="8dp"-->
+                    <!--android:text="@string/Do_you_have_a_discount_code"-->
+                    <!--android:textColor="@color/colorAccent"-->
+                    <!--android:textSize="16sp"/>-->
 
                 <TextView
                     android:id="@+id/cart_footer_quantity"
